--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5af7b4c9",
+   "id": "e984630a",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5aadd4d4",
+   "id": "9871826d",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "14d68265",
+   "id": "c0b7608a",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "81ee1ff8",
+   "id": "fa50298d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3d9bac3",
+   "id": "133c5998",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6d4a254b",
+   "id": "498e785d",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2490a648",
+   "id": "5abad201",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d97f6f77",
+   "id": "af580873",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28dd45fa",
+   "id": "2afea210",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b77f2fba",
+   "id": "8588c988",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fd617961",
+   "id": "e570c387",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e7d6f080",
+   "id": "931d985e",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e58dbdb3",
+   "id": "b603080b",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7e59a7ec",
+   "id": "d8b2a5b0",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1696a97b",
+   "id": "cfedae0b",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "844d70eb",
+   "id": "d6ee8270",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5b473103",
+   "id": "82e89fb5",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "372ac994",
+   "id": "bdd31e5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "deef3155",
+   "id": "f79ab609",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "bfa61079",
+   "id": "09f83a12",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2b97b27d",
+   "id": "951fd8f9",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9745d4a4",
+   "id": "75d50592",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "70ad92ff",
+   "id": "216d6855",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "336b0831",
+   "id": "fd19fca3",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "980d87bc",
+   "id": "d064b7ca",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4d5a512e",
+   "id": "9a5634eb",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "bbc7f3e8",
+   "id": "bfdf114d",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c15a498f",
+   "id": "55e8c877",
    "metadata": {},
    "source": [
     "# Exercise: Name triangles\n",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "21032efe",
+   "id": "ef89e026",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "e78179bb",
+   "id": "aea3a9d4",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "db1916a0",
+   "id": "c8dc67d8",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6b5897b",
+   "id": "3f4c5ac5",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "2dbdea70",
+   "id": "3c046645",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "96108c88",
+   "id": "df265c69",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90f7dd17",
+   "id": "f7b586b6",
    "metadata": {},
    "source": [
     "# `while` loops\n",
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "89f120c6",
+   "id": "c4da2639",
    "metadata": {
     "scrolled": true
    },
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5da90c01",
+   "id": "32674c3e",
    "metadata": {},
    "source": [
     "# Exercise: Sum to 100\n",
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "88548af1",
+   "id": "a06094ad",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44fada8c",
+   "id": "d296f88a",
    "metadata": {},
    "source": [
     "# `isdigit` is a *string* method\n",
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "20cd5237",
+   "id": "81c22fd6",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5014aa0",
+   "id": "118a277e",
    "metadata": {},
    "source": [
     "# Full list of methods on strings\n",
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff50218d",
+   "id": "c5b7cb78",
    "metadata": {},
    "source": [
     "# Controlling our loops\n",
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "d446fa96",
+   "id": "bd65733a",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e702d03a",
+   "id": "17af598b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "82a99ec2",
+   "id": "4525f06a",
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff37baf6",
+   "id": "36eabc55",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits\n",
@@ -1152,10 +1152,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0a2d0242",
+   "execution_count": 56,
+   "id": "3a5754c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a string: 123abc45!\n",
+      "Added 1; total is now 1\n",
+      "Added 2; total is now 3\n",
+      "Added 3; total is now 6\n",
+      "a is not numeric\n",
+      "b is not numeric\n",
+      "c is not numeric\n",
+      "Added 4; total is now 10\n",
+      "Added 5; total is now 15\n",
+      "! is not numeric\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "total = 0\n",
     "\n",
@@ -1164,7 +1182,24 @@
     "for one_character in s:\n",
     "\n",
     "    if not one_character.isdigit():\n",
-    "        continue"
+    "        print(f'{one_character} is not numeric')\n",
+    "        continue\n",
+    "        \n",
+    "    total += int(one_character)\n",
+    "    print(f'Added {one_character}; total is now {total}')\n",
+    "    \n",
+    "print('Done')    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b164b1e",
+   "metadata": {},
+   "source": [
+    "# Exercise: Sum digits (part 2)\n",
+    "\n",
+    "Repeat the previous exercise, except that we should keep asking the user for input strings, until we get an empt"
    ]
   }
  ],
