--- a/Python first steps, day 2 -- 2022-11Nov-28.ipynb
+++ b/Python first steps, day 2 -- 2022-11Nov-28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0530fbba",
+   "id": "a151a4e8",
    "metadata": {},
    "source": [
     "# Agenda, week 2: Loops, lists, and tuples\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c0ff0820",
+   "id": "a793b98d",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0bb0df93",
+   "id": "79dec717",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c429e324",
+   "id": "ec4f2e46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5334bf47",
+   "id": "18dfed1c",
    "metadata": {},
    "source": [
     "# Loops\n",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "159b3855",
+   "id": "f715431d",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b7e2316",
+   "id": "eb51c51c",
    "metadata": {},
    "source": [
     "There are some problems with the above code:\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "10d07c70",
+   "id": "1815cd46",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45961580",
+   "id": "69a3c0cb",
    "metadata": {},
    "source": [
     "How does our `for` loop work?\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6b52627",
+   "id": "6a8e113c",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ee327e8f",
+   "id": "8795870d",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f8a120e9",
+   "id": "799cd74f",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b66adb32",
+   "id": "98e0fd59",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "985cc1ad",
+   "id": "9fdc192e",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "988f3d44",
+   "id": "76bb3d0f",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "673cb3e5",
+   "id": "0f4a063e",
    "metadata": {},
    "source": [
     "When we say\n",
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f69ba968",
+   "id": "50071262",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "50406af0",
+   "id": "85a61104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f66234f3",
+   "id": "7c9c19f0",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b5e8127d",
+   "id": "906224c3",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7a05ff3e",
+   "id": "7c9042ce",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e1d78bf6",
+   "id": "ab19eaa4",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "dd3c81cf",
+   "id": "7a4d3328",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "39f85097",
+   "id": "08d394a6",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4cc8c581",
+   "id": "1e59e242",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a5807c46",
+   "id": "2221ef2a",
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "7a41cb86",
+   "id": "055dd181",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b731a89",
+   "id": "3b0a4be4",
    "metadata": {},
    "source": [
     "# Exercise: Name triangles\n",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f209a9a4",
+   "id": "9b41e63d",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "6b27152b",
+   "id": "31d04d36",
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "bbdc9899",
+   "id": "183ac32e",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0e3b294",
+   "id": "47888832",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "847eb59d",
+   "id": "292ae706",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8b140890",
+   "id": "78cefb96",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2eb78974",
+   "id": "71e42d63",
    "metadata": {},
    "source": [
     "# `while` loops\n",
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4cb2284f",
+   "id": "bbd37920",
    "metadata": {
     "scrolled": true
    },
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c77ab7e9",
+   "id": "1da03b6e",
    "metadata": {},
    "source": [
     "# Exercise: Sum to 100\n",
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "66aa18d9",
+   "id": "3b991898",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae5f06c5",
+   "id": "5104dc2f",
    "metadata": {},
    "source": [
     "# `isdigit` is a *string* method\n",
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "62f897d8",
+   "id": "fcbb81dc",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7da41094",
+   "id": "3651fa12",
    "metadata": {},
    "source": [
     "# Full list of methods on strings\n",
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3e6e11d",
+   "id": "f995a5b8",
    "metadata": {},
    "source": [
     "# Controlling our loops\n",
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "59350bcf",
+   "id": "a0863c05",
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12dafd77",
+   "id": "16940369",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "6fc55adc",
+   "id": "8f4a4775",
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02611b01",
+   "id": "82c14acb",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits\n",
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "58923b60",
+   "id": "5421e252",
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56529905",
+   "id": "a3558e96",
    "metadata": {},
    "source": [
     "# Exercise: Sum digits (part 2)\n",
@@ -1206,27 +1206,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c995d23d",
+   "execution_count": 57,
+   "id": "a824b080",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a string: 123abc\n",
+      "Added 1; total is now 1\n",
+      "Added 2; total is now 3\n",
+      "Added 3; total is now 6\n",
+      "a is not numeric\n",
+      "b is not numeric\n",
+      "c is not numeric\n",
+      "Enter a string: 987\n",
+      "Added 9; total is now 15\n",
+      "Added 8; total is now 23\n",
+      "Added 7; total is now 30\n",
+      "Enter a string: be right back\n",
+      "b is not numeric\n",
+      "e is not numeric\n",
+      "  is not numeric\n",
+      "r is not numeric\n",
+      "i is not numeric\n",
+      "g is not numeric\n",
+      "h is not numeric\n",
+      "t is not numeric\n",
+      "  is not numeric\n",
+      "b is not numeric\n",
+      "a is not numeric\n",
+      "c is not numeric\n",
+      "k is not numeric\n",
+      "Enter a string: 562\n",
+      "Added 5; total is now 35\n",
+      "Added 6; total is now 41\n",
+      "Added 2; total is now 43\n",
+      "Enter a string: \n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "total = 0\n",
     "\n",
-    "s = input('Enter a string: ').strip()\n",
+    "while True:   # infinite loop -- be careful! We need an escape hatch\n",
     "\n",
-    "for one_character in s:\n",
+    "    s = input('Enter a string: ').strip()\n",
+    "       \n",
+    "    if s == '':   # empty string?\n",
+    "        break     # exit the loop\n",
     "\n",
-    "    if not one_character.isdigit():\n",
-    "        print(f'{one_character} is not numeric')\n",
-    "        continue\n",
-    "        \n",
-    "    total += int(one_character)\n",
-    "    print(f'Added {one_character}; total is now {total}')\n",
+    "    # not empty? Go through each character in s...\n",
+    "    for one_character in s:\n",
+    "\n",
+    "        if not one_character.isdigit():\n",
+    "            print(f'{one_character} is not numeric')\n",
+    "            continue\n",
+    "\n",
+    "        total += int(one_character)\n",
+    "        print(f'Added {one_character}; total is now {total}')\n",
     "    \n",
     "print('Done')    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f031f1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
